--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
+    "postinstall": "npm run build && npm run db:generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^6.10.1",
     "@types/express": "^4.17.23",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -26,7 +28,8 @@
     "express": "^4.21.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
